<resources>
    <string name="CS_ERR_for_cannot_conn_service">Unable to connect to server. Please try again later.</string>
    <string name="CS_area_not_support_service">This service is not available in your region right now.</string>
    <string name="CS_back">Back</string>
    <string name="CS_bind_devices_excess">This account can be linked to a maximum of 5 devices. Please go to %s and unlink at least one device before continuing.</string>
    <string name="CS_email_already_verified">The email address has already been verified.</string>
    <string name="CS_install">Install</string>
    <string name="CS_logout_apps">You will be logged out of your account in the following apps:</string>
    <string name="CS_network_connect_error">No Internet connection. Check your network settings.</string>
    <string name="CS_next">Next</string>
    <string name="CS_no_network_content">The network server is unavailable. Please check your network connection.</string>
    <string name="CS_overload_message">Too many recent requests have been made. Please try later.</string>
    <string name="CS_retry">Retry</string>
    <string name="CS_system_error_tip">System error. Please log in again.</string>
    <string name="CS_title_tips">Note</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us_str">关于我们</string>
    <string name="acc_logout_tips">我们很遗憾您做出注销帐号的决定，在提交申请前请您仔细阅读以下内容：\n\n 1. 您应确保您有权决定该账户的注销事宜，不侵犯任何第三方的合法权益，如因此引发任何投诉争议，由您自行承担。\n\n 2. 帐号注销后您无法再使用国家反诈中心中的各项安全服务，您的举报及报案记录也将被清空。\n\n 3. 如您已被国家机关调查或正处于诉讼、仲裁程序中，请注意，注销您的帐号并不代表此帐号注销前的帐号行为和相关责任得到豁免或减轻。</string>
    <string name="accessibility">打开开关，才可以使用悬浮球功能。</string>
    <string name="account_cancel">Cancel</string>
    <string name="account_logout">Log out</string>
    <string name="account_manager">Manage account</string>
    <string name="action_settings">Settings</string>
    <string name="add_tag">添加标注</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="agentweb_coming_soon_download">Coming soon to download the file</string>
    <string name="agentweb_current_downloaded_length">downloaded:%s</string>
    <string name="agentweb_current_downloading_progress">Downloading:%s</string>
    <string name="agentweb_default_page_error">error~</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
    <string name="agentweb_file_chooser">Files</string>
    <string name="agentweb_file_download">Download</string>
    <string name="agentweb_honeycomblow">Wi-Fi disconnected. Continue the download via mobile data network?</string>
    <string name="agentweb_leave">Go away</string>
    <string name="agentweb_leave_app_and_go_other_page">leaving %s and opening another app?</string>
    <string name="agentweb_loading">Loading ...</string>
    <string name="agentweb_max_file_length_limit">The selected file can not be larger than %s MB</string>
    <string name="agentweb_tips">Note</string>
    <string name="agentweb_trickter">You have a new notice</string>
    <string name="androidx_camera_default_config_provider">androidx.camera.camera2.Camera2Config$DefaultProvider</string>
    <string name="apk_raw_finger">EDE02A47F935EC8990EF9CD1DEE9D0E9353ED612DAD85900966F79A972EBE071</string>
    <string name="app">APP</string>
    <string name="app_name">国家反诈中心</string>
    <string name="app_selected">APP选择</string>
    <string name="app_selected_apk">安装包选择</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_record">录音</string>
    <string name="back">返回</string>
    <string name="backendRecognization">反面识别结果</string>
    <string name="base_dpi">defalut 360dp</string>
    <string name="begin_screen_record">开始录制</string>
    <string name="bestface_fail">检测失败,获取最佳人脸失败</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_ok">OK</string>
    <string name="calling_mark">来电标注</string>
    <string name="cancel">取消</string>
    <string name="cardAlignment">请将银行卡与模板框对齐</string>
    <string name="cardFaceAlignment">请将身份证人像面与模板框对齐</string>
    <string name="cardNationalEmblemAlignment">请将身份证国徽面与模板框对齐</string>
    <string name="case_describe">案情描述</string>
    <string name="case_num">案件号</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chkpwd_host_name">hnid.cloud.hihonor.com</string>
    <string name="choose_from_apk">选择安装包</string>
    <string name="choose_from_app">选择APP</string>
    <string name="choose_from_call_record">从通话记录选择</string>
    <string name="choose_from_picture">选择图片</string>
    <string name="choose_from_sms">选择短信</string>
    <string name="choose_from_url">添加</string>
    <string name="choose_from_voice_record">选择录音文件</string>
    <string name="clause_befor">\t\t\t\t感谢您使用国家反诈中心，在您使用本软件过程中，我们可能会对您的部分个人信息进行收集、使用和共享。请您仔细阅读</string>
    <string name="clause_end">，并确定完全了解我们对您个人信息的处理规则。 \n\t\t\t\t如您同意《服务协议》与《隐私政策》，请点击“同意”开始使用国家反诈中心，我们会尽全力保护您的个人信息安全。</string>
    <string name="click_to_restart">Click to try again</string>
    <string name="close_float_window">关闭浮窗</string>
    <string name="cloudwalk_bestface_title">最佳人脸</string>
    <string name="cloudwalk_copy_modules">正在初始化运行环境</string>
    <string name="cloudwalk_copy_modules_failed">初始化模型文件失败</string>
    <string name="cloudwalk_faceserver_live">后端防Hack验证中</string>
    <string name="cloudwalk_faceverifying">人脸比对中….</string>
    <string name="cloudwalk_live_eye">眨眼</string>
    <string name="cloudwalk_live_headdown">缓慢点头</string>
    <string name="cloudwalk_live_headleft">向左缓慢转头</string>
    <string name="cloudwalk_live_headright">向右缓慢转头</string>
    <string name="cloudwalk_live_headup">缓慢抬头</string>
    <string name="cloudwalk_live_mouth">张嘴</string>
    <string name="cloudwalk_live_title">活体检测</string>
    <string name="cloudwalk_start_dect">开始检测</string>
    <string name="cloudwalk_tip_eye_too_small">眼睛睁大一点</string>
    <string name="cloudwalk_tip_face_shield">请勿遮挡脸部</string>
    <string name="cloudwalk_tip_glass">请勿遮挡脸部</string>
    <string name="cloudwalk_tip_himself">请确保是账户本人操作</string>
    <string name="cloudwalk_tip_light">请正对手机,确保光线充足</string>
    <string name="cloudwalk_tip_mouth_too_small">嘴巴张大一点</string>
    <string name="cloudwalk_tip_no_face">没有检测到人脸</string>
    <string name="cloudwalk_tip_not_center">请将人脸放入圈内</string>
    <string name="cloudwalk_tip_not_frontal">请正对屏幕</string>
    <string name="cloudwalk_tip_not_stable">请勿晃动</string>
    <string name="cloudwalk_tip_too_bright">环境光太亮了</string>
    <string name="cloudwalk_tip_too_close">请离远一些</string>
    <string name="cloudwalk_tip_too_dark">环境光太暗了</string>
    <string name="cloudwalk_tip_too_far">请靠近一些</string>
    <string name="comit_be_being">正在提交</string>
    <string name="commit">提交</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_success_file">举报成功，正在上传文件</string>
    <string name="commit_tip_start_str">最多可选择</string>
    <string name="confirm">确定</string>
    <string name="cs_cancel">Cancel</string>
    <string name="cs_check_honorapk_failure">Unable to check for updates.</string>
    <string name="cs_checking">Checking for updates…</string>
    <string name="cs_confirm">OK</string>
    <string name="cs_download_honorapk_failure">HONOR ID installation package could not be downloaded.</string>
    <string name="cs_download_no_space">Not enough free space. Download cannot be completed.</string>
    <string name="cs_download_retry">Download failed. Try again?</string>
    <string name="cs_downloading_honor_new">Updating HONOR ID…</string>
    <string name="cs_update_honor_title">HONOR ID</string>
    <string name="cs_update_message_new">This service requires the latest version of the following app:\n\n%1$s</string>
    <string name="edit_case_info">请填写案件信息</string>
    <string name="edit_case_info2">请提供线索(以下至少填写一项)</string>
    <string name="edit_info">请填写</string>
    <string name="editok">填写完成</string>
    <string name="electronic_evidence">线索提供</string>
    <string name="err_system">网络不给力，请检查网络后重试</string>
    <string name="err_timeout">网络不给力，请检查网络后重试</string>
    <string name="explain_elextronic_evidence">在线上传涉案线索</string>
    <string name="explain_mark">一键标记陌生来电</string>
    <string name="explain_report">快速举报可疑信息</string>
    <string name="explain_screen_record">语音视频快速采集</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="face_verfy_fail">验证失败</string>
    <string name="face_verfy_fail_tip">抱歉,人脸验证失败!</string>
    <string name="face_verfy_ok">验证成功</string>
    <string name="face_verfy_ok_tip">验证成功,感谢您的配合!</string>
    <string name="faceattack_4">-4 黑白图片攻击!</string>
    <string name="faceattack_7">-7 换人攻击!</string>
    <string name="faceattack_8">-8 多张人脸!</string>
    <string name="faceattr_not_avaliable">抱歉,此功能暂未开通,敬请期待!</string>
    <string name="facedec_net_fail">网络连接失败,请检查网络后再试!</string>
    <string name="facedect_fail">检测失败</string>
    <string name="facedect_fail_offline">前端检测失败</string>
    <string name="facedect_fail_server">后端防hack攻击失败</string>
    <string name="facedect_fail_tip">抱歉,人脸检测失败</string>
    <string name="facedect_ok">检测成功</string>
    <string name="picture_cancel">取消</string>
    <string name="picture_confirm">确定</string>
    <string name="picture_original_image">原图</string>
    <string name="picture_please_select">请选择</string>
    <string name="picture_prompt">提示</string>
    <string name="picture_prompt_content">是否保存图片至手机？</string>
    <string name="picture_select">选择</string>
</resources>