<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/picture_dialog_shadow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="16sp"
        android:textColor="#ff572e"
        android:gravity="center"
        android:id="@+id/tv_title"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture_prompt"/>
    <View
        android:id="@+id/top_line"
        android:background="@color/picture_color_e"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/tv_title"/>
    <TextView
        android:textSize="15sp"
        android:textColor="#53575e"
        android:gravity="center"
        android:id="@+id/tv_content"
        android:paddingLeft="15dp"
        android:paddingTop="30dp"
        android:paddingRight="15dp"
        android:paddingBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture_prompt_content"
        android:layout_below="@+id/top_line"/>
    <View
        android:id="@+id/bottom_line"
        android:background="@color/picture_color_e"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/tv_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/bottom_line">
        <Button
            android:textColor="#529bea"
            android:id="@+id/btn_cancel"
            android:background="@drawable/picture_btn_left_bottom_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/picture_cancel"
            android:layout_weight="1"/>
        <View
            android:background="@color/picture_color_e"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"/>
        <Button
            android:textColor="#529bea"
            android:id="@+id/btn_commit"
            android:background="@drawable/picture_btn_right_bottom_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/picture_confirm"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
