<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/picture_color_black"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/picture_wechat_style_preview_title_bar"/>
    <com.luck.picture.lib.widget.PreviewViewPager
        android:id="@+id/preview_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleViewBg"/>
    <View
        android:id="@+id/bottomLine"
        android:background="@color/picture_color_ec"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/select_bar_layout"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gallery"
        android:background="@color/picture_color_half_grey"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/bottomLine"/>
    <RelativeLayout
        android:gravity="center_vertical"
        android:id="@+id/select_bar_layout"
        android:background="?attr/picture.ac_preview.bottom.bg"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">
        <CheckBox
            android:textSize="14sp"
            android:textColor="@color/picture_color_53575e"
            android:gravity="center_vertical"
            android:id="@+id/cb_original"
            android:background="@color/picture_color_transparent"
            android:paddingLeft="5dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@color/picture_color_transparent"
            android:text="@string/picture_original_image"
            android:layout_centerInParent="true"/>
        <TextView
            android:enabled="false"
            android:textSize="14sp"
            android:textColor="?attr/picture.ac_preview.complete.textColor"
            android:gravity="center"
            android:id="@+id/tv_ok"
            android:paddingRight="12dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/picture_please_select"
            android:layout_alignParentRight="true"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/picture_color_white"
            android:gravity="center"
            android:id="@+id/tv_img_num"
            android:background="?attr/picture.num.style"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="0"
            android:layout_toLeftOf="@+id/tv_ok"
            android:layout_centerVertical="true"/>
        <TextView
            android:enabled="false"
            android:textSize="16sp"
            android:textColor="@color/picture_color_white"
            android:gravity="center"
            android:id="@+id/tv_selected"
            android:paddingRight="12dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/picture_select"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:gravity="center"
            android:id="@+id/check"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/tv_selected"
            android:layout_centerVertical="true"/>
        <View
            android:id="@+id/btnCheck"
            android:background="@color/picture_color_transparent"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>
